# modern-sentiment-analysis

./: .gitignore  LOSS_FUNCTION_THOUGHTS.md  README.md  TODO.md  modernbertdocs.txt  modernbertsequenceclassification.md  project_setup.sh  pyproject.toml  run_evaluation.py  run_sample_inference.py
demo-hf-space/: README.md  app.py  config.yaml  evaluation.py  inference.py  local_test_config.yaml  models.py  requirements.txt  run_sample_inference.py  train_utils.py  upload_to_hf.py
src/: classifiers.py  classifiers_v2.py  config.yaml  data_processing.py  evaluation.py  inference.py  models.py  models2.py  train.py  train_utils.py  utils.py  visualization.py
src/config_records/: 9264acc_9280f1_e1  9377acc_9378f1_e1  9551acc_9551f1_e4
src/notebooks/: data_viewer.ipynb
tests/: conftest.py  test_optimizations.py
tests/integration/: conftest.py  test_config_full_pipeline.yaml  test_data_pipeline.py  test_full_pipeline.py  test_training_components.py
tests/test_data/dummy_dataset/train/: data.txt
tests/test_data/dummy_dataset/validation/: data.txt
tests/test_data/dummy_tokenizer/: config.json  tokenizer_config.json  vocab.txt
tests/unit/: test_classifiers.py  test_data_processing.py  test_evaluation.py  test_inference.py  test_models.py  test_train.py  test_train_utils.py
